<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.veamospues</groupId>
    <artifactId>mule-examples-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Mule examples POM</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <mule.version>3.8.0</mule.version>
        <mule.tools.version>1.1</mule.tools.version>
        <jdk.version>1.8</jdk.version>
        <junit.version>4.9</junit.version>
        <default.scope>provided</default.scope>
        <builder.class>org.mule.config.builders.AutoConfigurationBuilder</builder.class>
    </properties>

    <modules>
        <module>hello-world</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.mule.tools.maven</groupId>
                <artifactId>mule-app-maven-plugin</artifactId>
                <version>${mule.tools.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <copyToAppsDirectory>true</copyToAppsDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.7</version>
                <executions>
                    <execution>
                        <id>add-resource</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>add-resource</goal>
                        </goals>
                        <configuration>
                            <resources>
                                <resource>
                                    <directory>src/main/app/</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- Mule Dependencies -->
    <dependencyManagement>
        <dependencies>
            <!-- Xml configuration -->
            <dependency>
                <groupId>org.mule.modules</groupId>
                <artifactId>mule-module-spring-config</artifactId>
                <version>${mule.version}</version>
                <scope>${default.scope}</scope>
            </dependency>
            <!-- Mule Transports -->
            <dependency>
                <groupId>org.mule.transports</groupId>
                <artifactId>mule-transport-http</artifactId>
                <version>${mule.version}</version>
                <scope>${default.scope}</scope>
            </dependency>
            <dependency>
                <groupId>org.mule.transports</groupId>
                <artifactId>mule-transport-vm</artifactId>
                <version>${mule.version}</version>
                <scope>${default.scope}</scope>
            </dependency>
            <!-- Mule Modules -->

            <!-- for testing -->
            <dependency>
                <groupId>org.mule.tests</groupId>
                <artifactId>mule-tests-functional</artifactId>
                <version>${mule.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>mule</id>
            <properties>
                <default.scope>compile</default.scope>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.4.0</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>java</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <additionalClasspathElements>
                                <additionalClasspathElement>${project.build.directory}/generated-resources</additionalClasspathElement>
                            </additionalClasspathElements>
                            <executable>java</executable>
                            <mainClass>org.mule.MuleServer</mainClass>
                            <arguments>
                                <argument>-debug</argument>
                                <argument>-config</argument>
                                <argument>${basedir}/src/main/app/mule-config.xml</argument>
                                <argument>-builder</argument>
                                <argument>${builder.class}</argument>
                                <argument>-Xmx2048m</argument>
                                <argument>-XX:+UseConcMarkSweepGC</argument>
                                <argument>-XX:+UseParNewGC</argument>
                                <argument>-XX:+CMSClassUnloadingEnabled</argument>
                                <argument>-XX:+CMSPermGenSweepingEnabled</argument>
                                <argument>-XX:PermSize=256m</argument>
                                <argument>-XX:MaxPermSize=512m</argument>
                            </arguments>
                            <classpathScope>compile</classpathScope>
                            <!-- <classpathScope>test</classpathScope> -->
                            <systemProperties>
                                <systemProperty>
                                    <key>app.home</key>
                                    <value>${basedir}/src/main/app</value>
                                </systemProperty>
                            </systemProperties>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>mulesoft-releases</id>
            <name>MuleSoft Releases</name>
            <url>https://repository.mulesoft.org/nexus/content/repositories/public</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>mule-public</id>
            <name>MuleSoft Releases</name>
            <url>https://repository.mulesoft.org/nexus/content/repositories/public</url>
        </pluginRepository>
    </pluginRepositories>
</project>
